# Algorithmic-Solution

./: .gitignore  CMakeLists.txt  LICENSE  PracticeAdditionAndSubtraction.py  README.md  _CMakeLists.txt  go.mod
DataBase/: hive大作业.sql
DataStruct/: WA_最长公共前缀_14.c  createCMake.py  kmp.c  test.py  丢失的数字_268.java  两个数组的交集2_350.java  两数之和_1.java  买卖股票的最佳时机2_122.java  二叉树的中序遍历_94.c  二叉树的最大深度_104.c  删除排序数组中的重复项.cc  删除排序数组中的重复项.java  删除链表的倒数第N个节点_剑指2_21.c  反转链表_206.c  只出现一次的数字_II_137.java  合并两个有序链表_21.c  回文数_9.java  回文链表_234.c  外观数列_38.c  字符串转换整数_8.c  对拍.bat  对称二叉树_101.c  将一维数组转变成二维数组_2022.java  数组串联_1929.java  整数反转_7.c  整数反转_7.java  旋转图像_48.c  旋转数组_189.c  旋转数组_189.java  最大子序和_53.java  有效的数独_36.c  环形链表_141.c  范围求和2_598.java  面试题_17_14_最小K个数.java  验证二叉搜索树_98.c  验证回文串_125.c
DataStruct/AcWing/: 13. 找出数组中重复的数字.py
DataStruct/LanQiao/: 1.A+B问题.py  10.十进制转十六进制.py  11.十六进制转十进制.py  12.十六进制转八进制.py  13.数列排序.py  21.Sine之舞.py  24.龟兔赛跑预测.py  26.报时助手.py  27.2n皇后问题.cc  27.2n皇后问题.py  28.Huffuman树.py  29.高精度加法.py  30.阶乘计算.py  498.回文日期.py  502.成绩统计.py  9.特殊回文数.py  PREV-65-单词分析.py  数列求值.py
DataStruct/LanQiao/2022 省赛/: F.py
DataStruct/LeetCode/: 1.两数之和.cpp  1.两数之和_test.go  100.相同的树.cpp  104.二叉树的最大深度.cpp  105.从前序与中序遍历序列构造二叉树.cpp  114.二叉树展开为链表.cpp  129.求根节点到叶节点数字之和.cpp  1455.检查单词是否为句中其他单词的前缀.py  146.LRU缓存.go  1464.数组中两元素的最大乘积.cpp  1470.重新排列数组.cpp  1475.商品折扣后的最终价格.cpp  155.最小栈.cpp  1582.二进制矩阵中的特殊位置.cpp  1598.文件夹操作日志搜集器.java  1608.特殊数组的特征值.java  1624.两个相同字符之间的最长子字符串.java  1791.找出星型图的中心节点.py  191.位-1-的个数.py  2101.引爆最多的炸弹.go  2192.有向无环图中一个节点的所有祖先.go  2192.有向无环图中一个节点的所有祖先_test.go  2373. 矩阵中的局部最大值.cc  278.第一个错误的版本.cpp  3046.分割数组_test.go  326.3-的幂.cpp  38.外观数列.cpp  461.汉明距离.cpp  547.省份数量.go  654.最大二叉树.py  717.1-比特与-2-比特字符  717.1-比特与-2-比特字符.cpp  739.每日温度.cpp  94.二叉树的中序遍历.cpp  LCP_07.传递信息.py  ListNode.java  tempCodeRunner.cpp  tempCodeRunner.java  tempCodeRunnerFile.cc  tempCodeRunnerFile.cpp  (+43 more)
DataStruct/LuoGu/: CF5A_Chat_Server's_Outgoing_Traffic.cc  P2669 [NOIP2015 普及组] 金币.c  P3954 [NOIP2017 普及组] 成绩.py  P5736 【深基7.例2】质数筛.py  P8598 [蓝桥杯 2013 省 AB] 错误票据.py  P8647 [蓝桥杯 2017 省 AB] 分巧克力.py  P8752 [蓝桥杯 2021 省 B2] 特殊年份.py  P8753 [蓝桥杯 2021 省 AB2] 小平方.py  temp.c  temp.cc
(+118 files in other folders)
