cmake_minimum_required(VERSION 3.21)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode
        DataStruct/LeetCode/1.两数之和.cpp
        DataStruct/LeetCode/2.两数相加.cpp
        DataStruct/LeetCode/draft.c
        "DataStruct/LeetCode/N 叉树的前序遍历_589.cc"
        DataStruct/LeetCode/N叉树的最大深度_559.c
        DataStruct/LeetCode/WA_最长公共前缀_14.c
        DataStruct/LeetCode/七进制数_504.cc
        DataStruct/LeetCode/二叉搜索树中的搜索_700.c
        DataStruct/LeetCode/二叉树的中序遍历_94.c
        DataStruct/LeetCode/二叉树的层序遍历_102.cc
        DataStruct/LeetCode/二叉树的最大深度_104.c
        DataStruct/LeetCode/二叉树的锯齿形层序遍历_103.cc
        DataStruct/LeetCode/亲密字符串_859.c
        DataStruct/LeetCode/删除排序数组中的重复项.cc
        DataStruct/LeetCode/删除链表的倒数第N个节点_剑指2_21.c
        DataStruct/LeetCode/反转字符串_344.c
        DataStruct/LeetCode/反转链表_206.c
        DataStruct/LeetCode/只出现一次的数字_136.c
        DataStruct/LeetCode/各位相加_258.cc
        DataStruct/LeetCode/合并两个有序链表_21.c
        DataStruct/LeetCode/回文链表_234.c
        DataStruct/LeetCode/外观数列_38.cc
        DataStruct/LeetCode/字符串中的第一个唯一字符_387.c
        DataStruct/LeetCode/字符串转换整数_8.c
        DataStruct/LeetCode/实现strStr_28.c
        DataStruct/LeetCode/对称二叉树_101.c
        DataStruct/LeetCode/将有序数组转换为二叉搜索树_108.c
        DataStruct/LeetCode/打乱数组_384.cc
        DataStruct/LeetCode/托普利茨矩阵_766.cpp
        DataStruct/LeetCode/提莫攻击_495.c
        DataStruct/LeetCode/整数反转_7.c
        DataStruct/LeetCode/旋转图像_48.c
        DataStruct/LeetCode/旋转字符串_796.cc
        DataStruct/LeetCode/旋转数组_189.c
        DataStruct/LeetCode/有效的字母异位词_242.c
        DataStruct/LeetCode/有效的括号_20.cc
        DataStruct/LeetCode/有效的数独_36.c
        DataStruct/LeetCode/检测大写字母_520.c
        DataStruct/LeetCode/环形链表_141.c
        DataStruct/LeetCode/矩形重叠_836.cc
        DataStruct/LeetCode/移动0_283.c
        DataStruct/LeetCode/移除元素_27.cc
        DataStruct/LeetCode/统计包含给定前缀的字符串_2185.cc
        DataStruct/LeetCode/验证二叉搜索树_98.c
        DataStruct/LeetCode/验证二叉搜索树_98.cc
        DataStruct/LeetCode/验证回文串_125.c
        DataStruct/LanQiao/27.2n皇后问题.cc)
